--- a/CookWhat/Base.lproj/Main.storyboard
+++ b/CookWhat/Base.lproj/Main.storyboard
@@ -499,6 +499,7 @@
                                 </state>
                                 <connections>
                                     <action selector="addIngredients:" destination="tQ5-Xl-08x" eventType="touchUpInside" id="skT-ff-3o6"/>
+                                    <segue destination="mSx-4D-zna" kind="push" id="wMS-2l-jRi"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -597,6 +598,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e62-YE-wVF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1960" y="-1241"/>
+        </scene>
+        <!--Add Ingredients To Recipe View Controller-->
+        <scene sceneID="5WI-xs-Uc4">
+            <objects>
+                <viewController id="mSx-4D-zna" customClass="AddIngredientsToRecipeViewController" customModule="CookWhat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ybV-uh-Ueg"/>
+                        <viewControllerLayoutGuide type="bottom" id="hP3-Wv-Sp0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tqP-d2-yyF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gRa-dg-pgH">
+                                <rect key="frame" x="0.0" y="250" width="320" height="269"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="textCell" id="MWp-o9-Nc7">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MWp-o9-Nc7" id="hwU-ss-rPX">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="urF-Al-bSF">
+                                <rect key="frame" x="28" y="98" width="264" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="quantity" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fO2-18-UR6">
+                                <rect key="frame" x="28" y="146" width="264" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTB-Uz-lwE">
+                                <rect key="frame" x="185" y="198" width="101" height="30"/>
+                                <state key="normal" title="Add more">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onAddBtnClick:" destination="mSx-4D-zna" eventType="touchUpInside" id="lfg-dT-puC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fEe-rf-mJt"/>
+                    <connections>
+                        <outlet property="ingredientAddedTable" destination="gRa-dg-pgH" id="ufa-ZD-vvE"/>
+                        <outlet property="ingredientName" destination="urF-Al-bSF" id="Zj5-jr-uQ8"/>
+                        <outlet property="ingreditentQuantity" destination="fO2-18-UR6" id="SGe-no-2WZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NkP-a8-8FU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2378" y="-1270"/>
         </scene>
         <!--Level Of Expertise-->
         <scene sceneID="4d7-JK-Ck3">
@@ -901,7 +960,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="peg-j5-j4k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2436" y="-1000"/>
+            <point key="canvasLocation" x="2472" y="-646"/>
         </scene>
         <!--Add Recipe-->
         <scene sceneID="eBb-ep-Wvv">
